CalculetteParser.java
// Generated from Calculette.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CalculetteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, COMMENTAIREMULTI=30, 
		COMMENTAIRESIMPLE=31, NEWLINE=32, WS=33, ENTIER=34, DOUBLE=35, TYPE=36, 
		RETURN=37, IDENTIFIANT=38;
	public static final int
		RULE_start = 0, RULE_calcul = 1, RULE_bloc = 2, RULE_instruction = 3, 
		RULE_expression = 4, RULE_decl = 5, RULE_assignation = 6, RULE_lire = 7, 
		RULE_ecrire = 8, RULE_plusEgal = 9, RULE_condition = 10, RULE_boucleWhile = 11, 
		RULE_boucleFor = 12, RULE_branchement = 13, RULE_fonction = 14, RULE_params = 15, 
		RULE_args = 16, RULE_finInstruction = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "calcul", "bloc", "instruction", "expression", "decl", "assignation", 
			"lire", "ecrire", "plusEgal", "condition", "boucleWhile", "boucleFor", 
			"branchement", "fonction", "params", "args", "finInstruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "'-'", "'*'", "'/'", "'+'", "'='", 
			"'print('", "'input('", "'+='", "'=='", "'!='", "'>'", "'>='", "'<'", 
			"'<='", "'true'", "'false'", "'&&'", "'||'", "'!'", "'while'", "'for'", 
			"';'", "'if'", "'else'", "','", null, null, null, null, null, null, null, 
			"'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "COMMENTAIREMULTI", "COMMENTAIRESIMPLE", 
			"NEWLINE", "WS", "ENTIER", "DOUBLE", "TYPE", "RETURN", "IDENTIFIANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Calculette.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private String evalexpr (String x, String op, String y, String typex, String typey) {
	        String flt = floatChoix(typex,typey);
	        if ( op.equals("*") ){
	            return x + y + flt + "MUL\n";
	        } else if ( op.equals("+") ){
	           return x + y + flt + "ADD\n";
	        } else if (op.equals("/")){
	            return x + y + flt + "DIV\n";
	        }else if (op.equals("-")){
	            return x + y + flt + "SUB\n";
	        }else{
	           System.err.println("Opérateur arithmétique incorrect : '"+op+"'");
	           throw new IllegalArgumentException("Opérateur arithmétique incorrect : '"+op+"'");
	        }
	    }

	    private String evalcond (String x, String op, String y, String typex, String typey) {
	        String flt = floatChoix(typex,typey);
	        if ( op.equals("==") ){
	            return x + y + flt + "EQUAL\n" ;
	        } else if (op.equals("!=")){
	             return x + y + flt + "NEQ\n";
	        }else if (op.equals("<")){
	            return x + y + flt + "INF\n";
	        }else if (op.equals(">=")){
	            return x + y + flt + "SUPEQ\n";
	        }else if (op.equals(">")){
	            return x + y + flt + "SUP\n";
	        }else if (op.equals("<=")){
	            return x + y + flt + "INFEQ\n";
	        }
	        else{
	           System.err.println("Opérateur de comparaison incorrect : '"+op+"'");
	           throw new IllegalArgumentException("Opérateur de comparaison incorrect : '"+op+"'");
	        }
	    }

	    private TablesSymboles tablesSymboles = new TablesSymboles();

	    private int _cur_label = 1;
	    /** générateur de nom d'étiquettes pour les boucles */
	    private String getNewLabel() { return "Label"+(_cur_label++); }

	    private String videPile(int x){
	       String res = "";
	            for(int i = 0; i<x; i++){
	                res += "POP\n";
	        }
	        return res;
	    }

	    private String choix(Object y){
	            if(y.toString().equals("PARAM")|y.toString().equals("LOCAL")){
	                return "L ";
	            }else{
	                return "G ";
	            }
	    }

	    private String type(Object typeVar){
	        if(typeVar.equals("double")){
	            return "F";
	        }
	        return "";
	    } 

	    private String declaFloat(String type){
	        if(type.equals("double")){
	            return "PUSHF 0.0\n";
	        }
	        return "PUSHI 0\n";
	    }

	    private String printFloat(String type, VariableInfo var){
	        String push = "PUSH" + choix(var.scope);
	        if(type.equals("double")){
	            return push + var.address + "\n" + push + (var.address + 1) + "\n" +"WRITEF\n" + "POP\n" + "POP\n";
	        }
	        return push + var.address + "\n" +  "WRITE\n" + "POP\n";
	    }

	    private String print(String expr, String type){
	        if(type.equals("double")){
	            return expr + "WRITEF\n";
	        }
	        return expr + "WRITE\n";
	    }


	    private String readFloat(String type, VariableInfo var){
	        String read = "STORE" + choix(var.scope);
	        if(type.equals("double")){
	            return "READF\n" + read + (var.address+1) + "\n" + read + var.address + "\n";
	        }
	        return "READ\n" + read + var.address + "\n";
	    }

	    private String floatChoix(String typea, String typeb){
	        if((typea.equals("double")) || (typeb.equals("double"))){
	            return "F";
	        }
	        return "";
	    }

	    private String pushChoix(VariableInfo var){
	       String p = "PUSH" + choix(var.scope);
	         if(var.type.equals("double")){
	              return p + var.address + "\n" + p + (var.address+1) + "\n";
	         }
	            return p + var.address + "\n";
	    }

	    private String returnChoix(VariableInfo var, String type){
	         if(type.equals("double")){
	              return "STOREL " + (tablesSymboles.getReturn().address+1) + "\n" + "STOREL " + tablesSymboles.getReturn().address + "\n" + "RETURN\n";
	         }
	            return "STOREL " + tablesSymboles.getReturn().address + "\n" + "RETURN\n";
	    }

	    private String resFonction(String type){
	        if(type.equals("double")){
	            return "PUSHF 0.0\n";
	        }
	        return "PUSHI 0\n";
	    }

	    private String assignationChoix(VariableInfo var){
	        String store = "STORE" + choix(var.scope);
	        if(var.type.equals("double")){
	            return store + (var.address+1) + "\n" + store + var.address + "\n";
	        }
	        return store + var.address + "\n";
	    }

	    private int sizeArgsF(String type, int x){
	        if(type.equals("double")){
	            return x+2;
	        }
	        return x+1;
	    }



	    private VariableInfo var;
	            

	public CalculetteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public CalculContext calcul;
		public CalculContext calcul() {
			return getRuleContext(CalculContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CalculetteParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			((StartContext)_localctx).calcul = calcul();
			setState(37);
			match(EOF);
			System.out.println(((StartContext)_localctx).calcul.code);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CalculContext extends ParserRuleContext {
		public String code;
		public DeclContext decl;
		public FonctionContext fonction;
		public InstructionContext instruction;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public List<FonctionContext> fonction() {
			return getRuleContexts(FonctionContext.class);
		}
		public FonctionContext fonction(int i) {
			return getRuleContext(FonctionContext.class,i);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public CalculContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calcul; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterCalcul(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitCalcul(this);
		}
	}

	public final CalculContext calcul() throws RecognitionException {
		CalculContext _localctx = new CalculContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_calcul);
		 ((CalculContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(40);
					((CalculContext)_localctx).decl = decl();
					 _localctx.code += ((CalculContext)_localctx).decl.code; 
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			 _localctx.code += "  JUMP Main\n"; 
			setState(52);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(49);
					match(NEWLINE);
					}
					} 
				}
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(55);
				((CalculContext)_localctx).fonction = fonction();
				 _localctx.code += ((CalculContext)_localctx).fonction.code; 
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(63);
					match(NEWLINE);
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			 _localctx.code += "LABEL Main\n"; 
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 468403096618L) != 0)) {
				{
				{
				setState(70);
				((CalculContext)_localctx).instruction = instruction();
				 _localctx.code += ((CalculContext)_localctx).instruction.code; 
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 _localctx.code += "HALT\n"; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocContext extends ParserRuleContext {
		public String code;
		public InstructionContext instruction;
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(CalculetteParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(CalculetteParser.NEWLINE, i);
		}
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterBloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitBloc(this);
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bloc);
		 ((BlocContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 468403096618L) != 0)) {
				{
				{
				setState(81);
				((BlocContext)_localctx).instruction = instruction();
				 _localctx.code += ((BlocContext)_localctx).instruction.code; 
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(T__1);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					match(NEWLINE);
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public String code;
		public ExpressionContext expression;
		public AssignationContext assignation;
		public LireContext lire;
		public EcrireContext ecrire;
		public PlusEgalContext plusEgal;
		public BoucleWhileContext boucleWhile;
		public BoucleForContext boucleFor;
		public BlocContext bloc;
		public BranchementContext branchement;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FinInstructionContext finInstruction() {
			return getRuleContext(FinInstructionContext.class,0);
		}
		public AssignationContext assignation() {
			return getRuleContext(AssignationContext.class,0);
		}
		public LireContext lire() {
			return getRuleContext(LireContext.class,0);
		}
		public EcrireContext ecrire() {
			return getRuleContext(EcrireContext.class,0);
		}
		public PlusEgalContext plusEgal() {
			return getRuleContext(PlusEgalContext.class,0);
		}
		public BoucleWhileContext boucleWhile() {
			return getRuleContext(BoucleWhileContext.class,0);
		}
		public BoucleForContext boucleFor() {
			return getRuleContext(BoucleForContext.class,0);
		}
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public BranchementContext branchement() {
			return getRuleContext(BranchementContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(CalculetteParser.RETURN, 0); }
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CalculetteListener ) ((CalculetteListener)listener).exitInstruction(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				((InstructionContext)_localctx).expression = expression(0);
				setState(97);
				finInstruction();
				 
				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).expression.code;
				        
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				((InstructionContext)_localctx).assignation = assignation();
				setState(101);
				finInstruction();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).assignation.code;
				        
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				((InstructionContext)_localctx).lire = lire();
				setState(105);
				finInstruction();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).lire.code;
				        
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				((InstructionContext)_localctx).ecrire = ecrire();
				setState(109);
				finInstruction();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).ecrire.code;
				        
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				((InstructionContext)_localctx).plusEgal = plusEgal();
				setState(113);
				finInstruction();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).plusEgal.code;
				        
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				((InstructionContext)_localctx).boucleWhile = boucleWhile();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).boucleWhile.code;
				        
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				((InstructionContext)_localctx).boucleFor = boucleFor();

				            ((InstructionContext)_localctx).code =  ((InstructionContext)_localctx).boucleFor.code;
				        
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				((InstructionContext)_localctx).bloc = bloc();
